# dxraylib

./: .buildinfo  .gitignore  .gitmodules  .pylintrc  README.md  api.html  genindex.html  index.html  install.html  introduction.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  introduction.doctree
.doctrees/api/: atomic_level_widths.doctree  atomic_weights.doctree  auger_yields.doctree  compound_parser.doctree  compton_energy.doctree  compton_profiles.doctree  constants.doctree  coster_kronig.doctree  cross_sections.doctree  crystal_diffraction.doctree  edge_energies.doctree  electronic_configurations.doctree  element_densities.doctree  fluorescence_cross_sections.doctree  (+11 more)
_sources/: introduction.rst
api/: atomic_level_widths.html  atomic_weights.html  auger_yields.html  compound_parser.html  compton_energy.html  compton_profiles.html  constants.html  coster_kronig.html  cross_sections.html  crystal_diffraction.html  edge_energies.html  electronic_configurations.html  element_densities.html  fluorescence_cross_sections.html  fluorescence_yields.html  jump_factors.html  line_energies.html  nist.html  non_rad_rate.html  polarized.html  rad_rate.html  radionuclides.html  refractive_indices.html  scattering_factors.html  unpolarized.html
docs/: conf.py  introduction.rst
dxraylib/: __init__.py  _compounds.py  _index.py  _indexors.py  _interpolate.py  _interpolators.py  _load.py  _splint.py  _utilities.py  atomiclevelwidth.py  atomicweight.py  auger_trans.py  comptonprofiles.py  config.py  config.toml  constants.py  coskron.py  cross_sections.py  cs_barns.py  cs_cp.py  densities.py  edges.py  fi.py  fii.py  fluor_yield.py  jumpy.py  polarized.py  radrate.py  refractive_indices.py  scattering.py  xraylib_nist_compounds.py  xraylib_parser.py  xraylib_radionuclides.py
envs/: dxraylib3.08.yml  dxraylib3.09.yml  dxraylib3.10.yml  dxraylib3.11.yml
jaxraylib/: __init__.py  __io.py  _constants.py  _indexors.py  _interpolators.py  _io.py  _splint.py  _utilities.py  anomalous_scattering.py  atomic_weight.py  atomicweight.py  compound_parser.py  config.py  config.toml  constants.py  cross_sections.py  cs_barns.py  cs_cp.py  densities.py  fi.py  fii.py  init.py  polarized.py  refractive_indices.py  scattering.py  xraylib_nist_compounds.py  xraylib_parser.py
pyxraylib/: __init__.py  anomalous_scattering.py  atomic_weight.py  compound_parser.py  config.py  cross_sections.py  init.py  refractive_indices.py
tests/: .coverage  config.py  test_atomic_level_width.py  test_atomicweight.py  test_auger_trans.py  test_coskron.py  test_cross_sections.py  test_cs_barns.py  test_cs_cp.py  test_densities.py  test_edges.py  test_fi.py  test_fii.py  test_fluor_yield.py  test_jumpy.py  test_polarized.py  test_refractive_indices.py  test_scattering.py  utilities.py
(+78 files in other folders)
